--- a/snake2.html
+++ b/snake2.html
@@ -2,6 +2,7 @@
 <title>Snake</title>
 <!--#include virtual="include/header.html" -->
 <link rel="stylesheet" type="text/css" href="./include/snake2.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="./include/main.css" media="screen" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
