--- a/snake2.html
+++ b/snake2.html
@@ -6,6 +6,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-<canvas id="canvas" width="450" height="450"></canvas>
+<canvas id="canvas" width="490" height="450"></canvas>
+<button id="startButton" type="button">Start!</button>
 <script src="./js/snake2.js"></script>
 </body>
